--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
     <title>Create React App + Go API</title>
   </head>
   <body>
-    <noscript>
+
+    <!-- <noscript>
       You need to enable JavaScript to run this app.
-    </noscript>
+    </noscript> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
